--- a/nvme-ol-9x.adoc
+++ b/nvme-ol-9x.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
 permalink: nvme-ol-9x.html
-keywords: nvme, oracle linux, 9.x, host configuration
-summary: NVMe-oF Host Configuration for Oracle Linux 9.x with ONTAP
+keywords: nvme, oracle linux, 9x, host configuration
+summary: NVMe-oF Host Configuration for Oracle Linux 9x with ONTAP
 ---
-= Configure Oracle Linux 9.x with NVMe-oF for ONTAP storage 
+= Configure Oracle Linux 9x with NVMe-oF for ONTAP storage 
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -17,7 +17,7 @@ include::_include/nvme/nvme-oracle-linux-introduction.adoc[]
 
 Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Oracle Linux 9x. For more support and feature information, see link:nvme-ol-supported-features.html[Oracle Linux ONTAP support and features].
 
-NVMe-oF with Oracle Linux 9.x has the following known limitation:
+NVMe-oF with Oracle Linux 9x has the following known limitation:
 
 * The `nvme disconnect-all` command disconnects both root and data filesystems and might lead to system instability. Do not issue this on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces.
 
@@ -38,11 +38,11 @@ For information on how to enable the HBA BIOS, see your vendor-specific document
 
 == Step 2: Install Oracle Linux and NVMe software and verify your configuration
 
-Use the following procedure to validate the minimum supported Oracle Linux 9.x software versions.
+Use the following procedure to validate the minimum supported Oracle Linux 9x software versions.
 
 .Steps
 
-. Install Oracle Linux 9.x on the server. After the installation is complete, verify that you are running the specified Oracle Linux 9.x kernel. 
+. Install Oracle Linux 9x on the server. After the installation is complete, verify that you are running the specified Oracle Linux 9x kernel. 
 +
 [source,cli]
 ----
@@ -80,7 +80,7 @@ The following example shows an `libnvme` package version:
 libnvme-1.11.1-1.el9.x86_64
 ----
 
-.	On the Oracle Linux 9.x host, check the `hostnqn` string at `/etc/nvme/hostnqn`: 
+.	On the Oracle Linux 9x host, check the `hostnqn` string at `/etc/nvme/hostnqn`: 
 +
 [source,cli]
 ----
@@ -744,11 +744,7 @@ nvme netapp ontapdevices -o json
 
 == Step 8: Set up secure in-band authentication
 
-<<<<<<< HEAD
-Beginning with Oracle Linux 9.4, secure in-band authentication is supported over NVMe/TCP between an Oracle Linux host and an ONTAP controller.
-=======
-Secure in-band authentication is supported over NVMe/TCP between a Oracle Linux 9.x host and an ONTAP controller.
->>>>>>> 632a6e6e4aa2d7e45bb96c43381aad97d23eca2c
+Beginning with Oracle Linux 9.4, secure in-band authentication is supported over NVMe/TCP between the Oracle Linux host and ONTAP controller.
 
 Each host or controller must be associated with a DH-HMAC-CHAP key to set up secure authentication. A DH-HMAC-CHAP key is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer.
 
