Set iSCSI `replacement_timeout`  to 5

--- a/hu-rhel-10x.adoc
+++ b/hu-rhel-10x.adoc
@@ -48,6 +48,8 @@ systemctl enable multipathd
 systemctl start multipathd
 ----
 
+linux-ol-multipathing-chk-config
+
 . Each time you boot the host, the empty `/etc/multipath.conf` zero-byte file automatically loads the NetApp recommended host multipath parameters as the default settings. You shouldn't need to make changes to the `/etc/multipath.conf` file for your host because the operating system is compiled with the multipath parameters that recognize and manage ONTAP LUNs correctly.
 +
 The following table shows the Linux OS native compiled multipath parameter settings for ONTAP LUNs.
