--- a/hu-sles-15spx.adoc
+++ b/hu-sles-15spx.adoc
@@ -15,8 +15,6 @@ summary: Install the Linux Host Utilities on a SUSE Linux Enterprise Server 15 S
 [.lead]
 The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a SUSE Linux Enterprise Server 15 SPx host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
-include::_include/hu/linux-configure-kvm-note.adoc[]
-
 include::_include/hu/linux-enable-san-boot.adoc[]
 
 include::_include/hu/install-linux-host-utilities-80.adoc[]
@@ -101,3 +99,7 @@ cat/sys/class/fc_host/host*/device/rport*/fc_remote_ports/rport*/port_state
 include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
+
+include::_include/hu/kvm.adoc[]
+
+// 2025 Dec 17, ONTAPDOC-3531
