--- a/hu_ubuntu_2204.adoc
+++ b/hu_ubuntu_2204.adoc
@@ -16,8 +16,6 @@ summary: Install Linux Host Utilities on an Ubuntu 24.04 host to manage FCP and 
 [.lead]
 The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on an Ubuntu 22.04 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
-include::_include/hu/linux-configure-kvm-note.adoc[]
-
 include::_include/hu/linux-enable-san-boot.adoc[]
 
 include::_include/hu/install-linux-host-utilities-80.adoc[]
@@ -42,5 +40,8 @@ include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[] 
 
+include::_include/hu/kvm.adoc[]
+
+// 2025 Dec 17, ONTAPDOC-3531
 // 2025 JULY 15, ONTAPDOC-3128
 // 2024 AUG 13, ONTAPDOC-2294
