--- a/nvme-ol-supported-features.adoc
+++ b/nvme-ol-supported-features.adoc
@@ -42,15 +42,16 @@ ONTAP supports the following SAN host features regardless of the ONTAP version r
 |===
 
 |Feature | Oracle Linux host version
-|The native udev rule in `nvme-cli` package provides round-robin load balancing for NVMe multipath
+|The native udev rule in `nvme-cli` package provides queue-depth load balancing for NVMe multipath
 a|9.6 or later 
-
 |SAN booting is enabled using the NVMe/FC protocol
 a|9.5 or later 
 |In-kernel NVMe multipathing for NVMe namespaces is enabled by default
 a|8.3 or later
 |The `nvme-cli` package includes auto-connect scripts removing the need for third-party scripts
 a|8.3 or later 
+|The native udev rule in `nvme-cli` package provides round-robin load balancing for NVMe multipath
+a|8.3 or later
 |===
 
 NOTE: For details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
