--- a/nvme-sles-supported-features.adoc
+++ b/nvme-sles-supported-features.adoc
@@ -21,16 +21,16 @@ Features supported for host configuration with NVMe over Fabrics (NVMe-oF) varie
 |Feature | SUSE Linux Enterprise Server host version| ONTAP version
 
 |Secure in-band authentication is supported over NVMe/TCP between a RHEL host and an ONTAP controller
-a|9.3 or later
+a|15 SP.? or later
  |9.12.1 or later
 |NVMe/TCP provides namespaces using the native `nvme-cli` package
-a|8.2 or later
+a|15 SP.4 or later
  |9.10.1 or later
 |NVMe/TCP is a fully supported enterprise feature
-a|9.0 or later
+a|15 SP.? or later
  |9.10.1 or later
 |NVMe and SCSI traffic is supported on the same host using NVMe multipath for NVMe-oF namespaces and dm-multipath for SCSI LUNs
-a|8.2 or later
+a|15 SP.? or later
  |9.4 or later
 |===
 
@@ -41,13 +41,11 @@ ONTAP supports the following SAN host features regardless of the ONTAP version r
 
 |Feature | SUSE Linux Enterprise Server host version
 |Native NVMe multipathing is enabled by default
-a|10.0 or later	 
+a|15 SP.? or later	 
 |SAN booting is enabled using the NVMe/FC protocol
-a|9.4 or later
+a|15 SP.7 or later
 |The `nvme-cli` package includes auto-connect scripts removing the need for third-party scripts
-a|8.2 or later
-|The native udev rule in `nvme-cli` package provides round-robin load balancing for NVMe multipath
-a|8.2 or later 
+a|15 SP.1 or later
 |===
 
 NOTE: For details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
