Add sles and red hat

--- a/hu-rhel-8x.adoc
+++ b/hu-rhel-8x.adoc
@@ -72,6 +72,6 @@ include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
 
-include::_include/hu/kvm.adoc[]
+include::_include/hu/kvm-redhat.adoc[]
 
 // 2025 Dec 17, ONTAPDOC-3531
