--- a/_include/hu/kvm.adoc
+++ b/_include/hu/kvm.adoc
@@ -1,3 +1,3 @@
-* Learn about Linux KVM and Virtualization
+* Learn about Oracle Linux KVM and Virtualization
 +
-Linux Kernel-based Virtual Machine (KVM) allows you to run multiple virtual machines on a single host. With ONTAP storage, LUNs can be presented directly to the KVM hypervisor over FCP or iSCSI, providing high-performance and reliable storage for your VMs. You don't need to manually configure Kernel-based Virtual Machine (KVM) settings because ONTAP LUNs are automatically mapped to the hypervisor. You can use ONTAP features such as snapshots and cloning at the LUN or volume level; for per-VM granularity, LUNs must be mapped directly to individual VMs using techniques like raw device mapping or passthrough.
+Oracle Linux can serve as a KVM host. This enables you to run multiple virtual machines on a single physical server using the Linux Kernel-based Virtual Machine (KVM) technology. You can manage and support multiple Oracle Linux KVM hosts by using Oracle Linux Virtualization Manager, which is built from the open-source oVirt project. The KVM host doesn't require explicit host configuration settings for ONTAP LUNs.
