--- a/hu-rhel-9x.adoc
+++ b/hu-rhel-9x.adoc
@@ -72,7 +72,7 @@ include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
 
-include::_include/hu/kvm.adoc[]
+include::_include/hu/kvm-redhat.adoc[]
 
 // 2025 Dec 17, ONTAPDOC-3531
 //ONTAPDOC-2984 22-May-2025
