--- a/hu-sles-15spx.adoc
+++ b/hu-sles-15spx.adoc
@@ -100,6 +100,6 @@ include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
 
-include::_include/hu/kvm.adoc[]
+include::_include/hu/kvm-sles.adoc[]
 
 // 2025 Dec 17, ONTAPDOC-3531
