--- a/hu-centos-8x.adoc
+++ b/hu-centos-8x.adoc
@@ -41,5 +41,7 @@ include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
 
+include::_include/hu/kvm-centos.adoc[]
+
 // 2025 Dec 17, ONTAPDOC-3531
 // 2025 JUN 30, ONTAPDOC-3068
