--- a/hu-rockylinux-10x.adoc
+++ b/hu-rockylinux-10x.adoc
@@ -143,6 +143,8 @@ include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
 
+include::_include/hu/kvm-rockylinux.adoc[]
+
 // 2025 Dec 17, ONTAPDOC-3531
 // 2025 JUN 25, ONTAPDOC-3090
 // ONTAPDOC-2987 8-May-2025
