--- a/hu-rockylinux-8x.adoc
+++ b/hu-rockylinux-8x.adoc
@@ -39,5 +39,7 @@ include::_include/hu/use-linux-host-utilities.adoc[]
  
 include::_include/hu/asm-mirroring.adoc[]
 
+include::_include/hu/kvm-rockylinux.adoc[]
+
 
 // 2025 Dec 17, ONTAPDOC-3531
