--- a/hu-rockylinux-9x.adoc
+++ b/hu-rockylinux-9x.adoc
@@ -72,6 +72,8 @@ include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
 
+include::_include/hu/kvm-rockylinux.adoc[]
+
 // 2025 Dec 17, ONTAPDOC-3531
 // 2025 JUN 25, ONTAPDOC-3090
 // ONTAPDOC-2984 22-May-2025
