--- a/hu_ubuntu_2404.adoc
+++ b/hu_ubuntu_2404.adoc
@@ -38,7 +38,9 @@ There are no known issues.
 
 include::_include/hu/use-linux-host-utilities.adoc[]
 
-include::_include/hu/asm-mirroring.adoc[] 
+include::_include/hu/asm-mirroring.adoc[]
+
+include::_include/hu/kvm-ubuntu.adoc[]
 
 // 2025 Dec 17, ONTAPDOC-3531
 // 2025 JULY 15, ONTAPDOC-3128
