--- a/hu-rhel-10x.adoc
+++ b/hu-rhel-10x.adoc
@@ -143,7 +143,7 @@ include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
 
-include::_include/hu/kvm.adoc[]
+include::_include/hu/kvm-redhat.adoc[]
 
 // 2025 Dec 17, ONTAPDOC-3531
 //ONTAPDOC-2987 8-May-2025
