Add notes for SLES 12 and Ubuntu 2004

--- a/hu_sles_12.adoc
+++ b/hu_sles_12.adoc
@@ -53,4 +53,7 @@ include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
 
+include::_include/hu/kvm-sles.adoc[]
+
+// 2025 DEC 19, ONTAPDOC-3531
 // 2024 SEP 2, ONTAPDOC-2345
