--- a/hu_sles_12SP1.adoc
+++ b/hu_sles_12SP1.adoc
@@ -40,3 +40,7 @@ There are no known issues.
 include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
+
+include::_include/hu/kvm-sles.adoc[]
+
+// 2025 DEC 19, ONTAPDOC-3531
