--- a/hu_ubuntu_2004.adoc
+++ b/hu_ubuntu_2004.adoc
@@ -34,5 +34,10 @@ include::_include/hu/linux-customize-parameters-step4.adoc[]
 
 There are no known issues.
 
+== What's next?
+
+include::_include/hu/kvm-ubuntu.adoc[]
+
+// 2025 DEC 19, ONTAPDOC-3531
 // 2025 JUL-15, ONTAPDOC-3128
 // 2024 AUG 13, ONTAPDOC-2294
