--- a/nvme-aix.adoc
+++ b/nvme-aix.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_aix.html
+permalink: nvme-aix.html
 keywords: nvme, linux, rhel, red hat, enterprise, aix, ontap
 summary: How to Configure NVMe/FC Host for AIX with ONTAP
 ---
