--- a/nvme-esxi-7.adoc
+++ b/nvme-esxi-7.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_esxi_7.html
+permalink: nvme-esxi-7.html
 keywords: nvme, esxi, ontap, nvme/fc, hypervisor
 summary: Describes how to configure NVMe-oF for ESXi 7.x with ONTAP
 ---
