--- a/nvme-esxi-8.adoc
+++ b/nvme-esxi-8.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_esxi_8.html
+permalink: nvme-esxi-8.html
 keywords: nvme, esxi, ontap, nvme/fc, hypervisor
 summary: You can configure NVMe over Fabrics (NVMe-oF) on initiator hosts running ESXi 8.x and ONTAP as the target.
 ---
