--- a/nvme-windows-2012r2.adoc
+++ b/nvme-windows-2012r2.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: nvme_windows_2019.html
+permalink: nvme-windows-2012r2.html
 keywords: nvme, windows, enterprise
-summary: You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running Windows Server 2019 for operation with ONTAP LUNs.
+summary: You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running Windows Server 2012 R2 for operation with ONTAP LUNs.
 ---
-= NVMe/FC Host Configuration for Windows Server 2019 with ONTAP
+= Configure Windows Server 2012 R2 with NVMe/FC for ONTAP
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,16 +13,16 @@ summary: You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running Wi
 :imagesdir: ./media/
 
 [.lead]
-You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running Windows Server 2019 for operation with ONTAP LUNs..
+You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running Windows Server 2012 R2 for operation with ONTAP LUNs.
 
 .About this task
-You can use the following support with the NVMe/FC host configuration for Windows 2019. You should also review the known limitations before starting the configuration process.
+You can use the following support with the NVMe/FC host configuration for Windows 2012 R2. You should also review the known limitations before starting the configuration process.
 
 include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 * Support available:
 +
-Beginning with ONTAP 9.7, NVMe/FC is supported for Windows Server 2019.
+Beginning with ONTAP 9.7, NVMe/FC is supported for Windows Server 2012 R2.
 +
 include::_include/nvme/reuse_supportability_notes.adoc[]
 
