--- a/nvme-windows-2022.adoc
+++ b/nvme-windows-2022.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: nvme_windows_2016.html
+permalink: nvme-windows-2022.html
 keywords: nvme, windows, enterprise
-summary: You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running Windows Server 2016 for operation with ONTAP LUNs.
+summary: You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running Windows Server 2022 for operation with ONTAP LUNs.
 ---
-= Configure Windows Server 2016 with NVMe/FC for ONTAP
+= Configure Windows Server 2022 with NVMe/FC for ONTAP
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,16 +13,14 @@ summary: You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running Wi
 :imagesdir: ./media/
 
 [.lead]
-You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running Windows Server 2016 for operation with ONTAP LUNs.
+You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running Windows Server 2022 for operation with ONTAP LUNs.
 
 .About this task
-You can use the following support with the NVMe/FC host configuration for Windows 2016. You should also review the known limitations before starting the configuration process.
-
-include::_include/hu/reuse_hu_cloud_note.adoc[]
+You can use the following support with the NVMe/FC host configuration for Windows 2022. You should also review the known limitations before starting the configuration process.
 
 * Support available:
 +
-Beginning with ONTAP 9.7, NVMe/FC is supported for Windows Server 2016.
+Beginning with ONTAP 9.7, NVMe/FC is supported for Windows Server 2022.
 +
 include::_include/nvme/reuse_supportability_notes.adoc[]
 
