--- a/nvme-sles-supported-features.adoc
+++ b/nvme-sles-supported-features.adoc
@@ -21,16 +21,19 @@ Features supported for host configuration with NVMe over Fabrics (NVMe-oF) varie
 |Feature | SUSE Linux Enterprise Server host version| ONTAP version
 
 |Secure in-band authentication is supported over NVMe/TCP between a RHEL host and an ONTAP controller
-a|15 SP.? or later
+a|15 SP.4 or later
  |9.12.1 or later
 |NVMe/TCP provides namespaces using the native `nvme-cli` package
 a|15 SP.4 or later
  |9.10.1 or later
-|NVMe/TCP is a fully supported enterprise feature
-a|15 SP.? or later
+|TLS 1.3 encryption is supported for NVMe/TCP
+a|15 SP.6 or later
+ |9.12.1 or later
+|Persistent discovery controllers (PDCs) are supported using a unique discovery NQN
+a|15 SP.4 or later
  |9.10.1 or later
 |NVMe and SCSI traffic is supported on the same host using NVMe multipath for NVMe-oF namespaces and dm-multipath for SCSI LUNs
-a|15 SP.? or later
+a|15 SP.1 or later
  |9.4 or later
 |===
 
@@ -41,7 +44,7 @@ ONTAP supports the following SAN host features regardless of the ONTAP version r
 
 |Feature | SUSE Linux Enterprise Server host version
 |Native NVMe multipathing is enabled by default
-a|15 SP.? or later	 
+a|15 SP.1 or later	 
 |SAN booting is enabled using the NVMe/FC protocol
 a|15 SP.7 or later
 |The `nvme-cli` package includes auto-connect scripts removing the need for third-party scripts
@@ -52,7 +55,13 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 
 == What's next
 
-link:nvme-sles15-spx.html[Learn about configuring NVMe for SUSE Linux Enterprise Server 15 SP.x]
+[cols="50,50",options="header"]
+|===
+
+|If your SUSE Linux Enterprise Server version is .. | Learn about ..
+|15 SP.x series
+|link:nvme-sles15-spx.html[Configuring NVMe for SUSE Linux Enterprise Server 15 SP.x]
+|===
 
 .Related information
 
