Add example outputs and some minor edits

--- a/_include/hu/solaris-verify-settings-and-path-status.adoc
+++ b/_include/hu/solaris-verify-settings-and-path-status.adoc
@@ -1,6 +1,6 @@
 . Verify that 4KB aligned I/O with zpools using ONTAP LUNs is supported:
 
-.. Verify that you Solaris host is installed with the latest Support Repository Update (SRU):
+.. Verify that your Solaris host is installed with the latest Support Repository Update (SRU):
 +
 [source,cli]
 ----
