--- a/hu-ol-9x.adoc
+++ b/hu-ol-9x.adoc
@@ -29,7 +29,7 @@ include::_include/hu/linux-ol-multipathing.adoc[]
 
 == Step 4: Confirm the iSCSI configuration for your host
 
-Confirm that the iSCSI service is running and connecting to the iSCSI targets.
+To ensure that multipathing is configured correctly for your host, set the timeout parameter and confirm that the iSCSI service is running and connecting to the iSCSI targets.
 
 .Before you begin
 Verify that the iSCSI initiator package (iscsi-initiator-utils) is installed. 
